--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="output.css">
-</head>
-<body class="font-main">
-    <p class="">Hello World</p>
-</body>
+    <link rel="stylesheet" href="output.css" />
+  </head>
+  <body class="font-main">
+    <nav>
+      <!-- first-child  -->
+      <div class="flex justify-between bg-background">
+        <!-- right side  -->
+        <div class="flex px-5 py-2 space-x-4">
+          <!-- button  -->
+          <button>
+            <svg
+              class="size-11 border-2 rounded-xl p-1 fill-primary border-primary"
+              xmlns="http://www.w3.org/2000/svg"
+              id="Layer_1"
+              data-name="Layer 1"
+              viewBox="0 0 24 24"
+              width="512"
+              height="512"
+            >
+              <rect y="11" width="24" height="2" />
+              <rect y="4" width="24" height="2" />
+              <rect y="18" width="24" height="2" />
+            </svg>
+          </button>
+          <!-- web name  -->
+          <div class="flex text-xl items-center justify-center">
+            <p class="text-secondary-dark">Feeds</p>
+            <p class="text-secondary-light">page</p>
+          </div>
+          <!-- text  -->
+          <div class="flex text-xl items-center justify-center space-x-1">
+            <p class="text-forText-light">userOne</p>
+            <p class="text-forText-light">/</p>
+            <p class="text-forText-dark">repoOne</p>
+          </div>
+        </div>
+
+        <!-- left side  -->
+        <div class="flex px-5 py-2 space-x-4">
+          <!-- searchbar  -->
+          <input
+            class="bg-black outline-none border-2 border-primary text-forText-dark pl-2 rounded-xl"
+            type="search"
+            placeholder="type to search"
+          />
+          <p class="flex justify-center items-center">|</p>
+          <!-- icon family  -->
+          <div>
+            <ul class="flex space-x-2">
+              <li>
+                <svg
+                  class="iconStyle fill-primary"
+                  xmlns="http://www.w3.org/2000/svg"
+                  id="Layer_1"
+                  data-name="Layer 1"
+                  viewBox="0 0 24 24"
+                  width="512"
+                  height="512"
+                >
+                  <path
+                    d="M19,2H5C2.24,2,0,4.24,0,7v10c0,2.76,2.24,5,5,5h14c2.76,0,5-2.24,5-5V7c0-2.76-2.24-5-5-5ZM5,4h14c1.65,0,3,1.35,3,3H2c0-1.65,1.35-3,3-3Zm14,16H5c-1.65,0-3-1.35-3-3V9H22v8c0,1.65-1.35,3-3,3ZM10,12c0,.55-.45,1-1,1h-1v4c0,.55-.45,1-1,1s-1-.45-1-1v-4h-1c-.55,0-1-.45-1-1s.45-1,1-1h4c.55,0,1,.45,1,1Zm10,0c0,.55-.45,1-1,1h-6c-.55,0-1-.45-1-1s.45-1,1-1h6c.55,0,1,.45,1,1Zm0,4c0,.55-.45,1-1,1h-6c-.55,0-1-.45-1-1s.45-1,1-1h6c.55,0,1,.45,1,1Z"
+                  />
+                </svg>
+              </li>
+              <li>
+                <svg
+                  class="iconStyle fill-primary"
+                  xmlns="http://www.w3.org/2000/svg"
+                  id="Layer_1"
+                  data-name="Layer 1"
+                  viewBox="0 0 24 24"
+                  width="512"
+                  height="512"
+                >
+                  <polygon
+                    points="24 11 13 11 13 0 11 0 11 11 0 11 0 13 11 13 11 24 13 24 13 13 24 13 24 11"
+                  />
+                </svg>
+              </li>
+              <li>
+                <svg
+                  class="iconStyle fill-primary"
+                  xmlns="http://www.w3.org/2000/svg"
+                  id="Layer_1"
+                  data-name="Layer 1"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    d="m20,8c2.206,0,4-1.794,4-4s-1.794-4-4-4-4,1.794-4,4,1.794,4,4,4Zm0-6c1.103,0,2,.897,2,2s-.897,2-2,2-2-.897-2-2,.897-2,2-2Zm1.868,8.301c-.127-.538-.675-.869-1.202-.745-.538.127-.871.665-.745,1.202l1.057,4.489c.184.658.051,1.348-.365,1.893-.419.547-1.056.86-1.748.86H5.135c-.67,0-1.294-.297-1.712-.815-.417-.517-.573-1.183-.439-1.786l2.094-7.777c.74-3.31,3.642-5.621,7.056-5.621.43,0,.859.038,1.275.114.551.098,1.064-.264,1.163-.806.099-.544-.263-1.064-.806-1.163-.534-.097-1.083-.146-1.633-.146C7.776,0,4.072,2.955,3.136,7.144l-2.094,7.776c-.278,1.244.022,2.527.824,3.521.799.991,1.991,1.56,3.269,1.56h1.966c.465,2.279,2.484,4,4.899,4s4.434-1.721,4.899-4h1.965c1.32,0,2.537-.6,3.337-1.646.801-1.048,1.057-2.377.713-3.605l-1.046-4.448Zm-9.868,11.699c-1.302,0-2.402-.839-2.816-2h5.631c-.414,1.161-1.514,2-2.816,2Z"
+                  />
+                </svg>
+              </li>
+              <li>
+                <svg
+                  class="iconStyle fill-primary"
+                  xmlns="http://www.w3.org/2000/svg"
+                  id="Layer_1"
+                  data-name="Layer 1"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    d="m8,16c0,.828-.672,1.5-1.5,1.5s-1.5-.672-1.5-1.5.672-1.5,1.5-1.5,1.5.672,1.5,1.5Zm-1.5-11.5c-.828,0-1.5.672-1.5,1.5s.672,1.5,1.5,1.5,1.5-.672,1.5-1.5-.672-1.5-1.5-1.5Zm0,5c-.828,0-1.5.672-1.5,1.5s.672,1.5,1.5,1.5,1.5-.672,1.5-1.5-.672-1.5-1.5-1.5ZM19,0H5C2.243,0,0,2.243,0,5v13c0,2.757,2.243,5,5,5h3c.552,0,1-.447,1-1s-.448-1-1-1h-3c-1.654,0-3-1.346-3-3V5c0-1.654,1.346-3,3-3h14c1.654,0,3,1.346,3,3v9c0,.553.448,1,1,1s1-.447,1-1V5c0-2.757-2.243-5-5-5Zm-8,7h7c.552,0,1-.448,1-1s-.448-1-1-1h-7c-.552,0-1,.448-1,1s.448,1,1,1Zm0,5h7c.552,0,1-.448,1-1s-.448-1-1-1h-7c-.552,0-1,.448-1,1s.448,1,1,1Zm12.705,6.549c.391.578.391,1.324,0,1.902-.896,1.325-2.959,3.549-6.705,3.549s-5.809-2.224-6.706-3.549c-.391-.579-.391-1.325,0-1.902.896-1.325,2.958-3.549,6.705-3.549s5.809,2.224,6.705,3.549Zm-1.775.951c-.73-1.006-2.263-2.5-4.93-2.5s-4.201,1.495-4.93,2.5c.729,1.006,2.263,2.5,4.93,2.5s4.2-1.494,4.93-2.5Zm-4.93-1.5c-.828,0-1.5.672-1.5,1.5s.672,1.5,1.5,1.5,1.5-.672,1.5-1.5-.672-1.5-1.5-1.5Z"
+                  />
+                </svg>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- second child  -->
+      <div class=""></div>
+    </nav>
+  </body>
 </html>
