--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="output.css" />
   </head>
-  <body class="font-main">
+  <body class="font-main bg-background">
     <nav>
       <!-- first-child  -->
       <div class="flex justify-between bg-background">
@@ -20,7 +20,7 @@
               id="Layer_1"
               data-name="Layer 1"
               viewBox="0 0 24 24"
-              width="512"
+              width="512"`
               height="512"
             >
               <rect y="11" width="24" height="2" />
@@ -54,7 +54,8 @@
           <div>
             <ul class="flex space-x-2">
               <li>
-                <svg
+                <abbr title="Feeds">
+                  <svg
                   class="iconStyle fill-primary"
                   xmlns="http://www.w3.org/2000/svg"
                   id="Layer_1"
@@ -67,8 +68,11 @@
                     d="M19,2H5C2.24,2,0,4.24,0,7v10c0,2.76,2.24,5,5,5h14c2.76,0,5-2.24,5-5V7c0-2.76-2.24-5-5-5ZM5,4h14c1.65,0,3,1.35,3,3H2c0-1.65,1.35-3,3-3Zm14,16H5c-1.65,0-3-1.35-3-3V9H22v8c0,1.65-1.35,3-3,3ZM10,12c0,.55-.45,1-1,1h-1v4c0,.55-.45,1-1,1s-1-.45-1-1v-4h-1c-.55,0-1-.45-1-1s.45-1,1-1h4c.55,0,1,.45,1,1Zm10,0c0,.55-.45,1-1,1h-6c-.55,0-1-.45-1-1s.45-1,1-1h6c.55,0,1,.45,1,1Zm0,4c0,.55-.45,1-1,1h-6c-.55,0-1-.45-1-1s.45-1,1-1h6c.55,0,1,.45,1,1Z"
                   />
                 </svg>
+                </abbr>
+                
               </li>
               <li>
+                
                 <svg
                   class="iconStyle fill-primary"
                   xmlns="http://www.w3.org/2000/svg"
