--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="output.css" />
   </head>
   <body class="font-main bg-background">
-    <nav>
-      <!-- first-child  -->
+    <nav class="w-screen">
+      <!-- first-child nav -->
       <div class="flex justify-between bg-nav">
         <!-- right side  -->
         <div class="flex px-5 py-2 space-x-4">
@@ -115,10 +115,12 @@
         </div>
       </div>
       <!-- second child  -->
-      <div class="flex px-5 py-2 bg-nav justify-between border-1 border-slate-100">
+      <div
+        class="navStyle flex px-5 py-2 bg-nav justify-between border-1 border-slate-100"
+      >
         <!-- first-child -->
-        <ul class="flex space-x-3 text-sm">
-          <li class="flex items-center space-x-2">
+        <ul class="flex space-x-2 text-sm">
+          <li class="liStyle flex items-center space-x-1">
             <svg
               class="iconStyle fill-primary"
               xmlns="http://www.w3.org/2000/svg"
@@ -134,7 +136,7 @@
             </svg>
             <p class="text-forText-dark">Explore</p>
           </li>
-          <li class="flex items-center space-x-2">
+          <li class="liStyle flex items-center space-x-1">
             <svg
               class="fill-primary iconStyle"
               xmlns="http://www.w3.org/2000/svg"
@@ -153,23 +155,113 @@
             </svg>
             <p class="text-forText-dark">History</p>
           </li>
-          <li class="flex space-x-2 items-center">
-            <svg class="fill-primary iconStyle" id="Layer_1" height="512" viewBox="0 0 24 24" width="512" xmlns="http://www.w3.org/2000/svg" data-name="Layer 1"><path d="m17 14a1 1 0 0 1 -1 1h-8a1 1 0 0 1 0-2h8a1 1 0 0 1 1 1zm-4 3h-5a1 1 0 0 0 0 2h5a1 1 0 0 0 0-2zm9-6.515v8.515a5.006 5.006 0 0 1 -5 5h-10a5.006 5.006 0 0 1 -5-5v-14a5.006 5.006 0 0 1 5-5h4.515a6.958 6.958 0 0 1 4.95 2.05l3.484 3.486a6.951 6.951 0 0 1 2.051 4.949zm-6.949-7.021a5.01 5.01 0 0 0 -1.051-.78v4.316a1 1 0 0 0 1 1h4.316a4.983 4.983 0 0 0 -.781-1.05zm4.949 7.021c0-.165-.032-.323-.047-.485h-4.953a3 3 0 0 1 -3-3v-4.953c-.162-.015-.321-.047-.485-.047h-4.515a3 3 0 0 0 -3 3v14a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3z"/></svg>
+          <li class="liStyle flex space-x-1 items-center">
+            <svg
+              class="fill-primary iconStyle"
+              id="Layer_1"
+              height="512"
+              viewBox="0 0 24 24"
+              width="512"
+              xmlns="http://www.w3.org/2000/svg"
+              data-name="Layer 1"
+            >
+              <path
+                d="m17 14a1 1 0 0 1 -1 1h-8a1 1 0 0 1 0-2h8a1 1 0 0 1 1 1zm-4 3h-5a1 1 0 0 0 0 2h5a1 1 0 0 0 0-2zm9-6.515v8.515a5.006 5.006 0 0 1 -5 5h-10a5.006 5.006 0 0 1 -5-5v-14a5.006 5.006 0 0 1 5-5h4.515a6.958 6.958 0 0 1 4.95 2.05l3.484 3.486a6.951 6.951 0 0 1 2.051 4.949zm-6.949-7.021a5.01 5.01 0 0 0 -1.051-.78v4.316a1 1 0 0 0 1 1h4.316a4.983 4.983 0 0 0 -.781-1.05zm4.949 7.021c0-.165-.032-.323-.047-.485h-4.953a3 3 0 0 1 -3-3v-4.953c-.162-.015-.321-.047-.485-.047h-4.515a3 3 0 0 0 -3 3v14a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3z"
+              />
+            </svg>
             <p class="text-forText-dark">BluePrints</p>
           </li>
-          <li class="flex space-x-2 items-center">
-            <svg class="fill-primary iconStyle" xmlns="http://www.w3.org/2000/svg" id="Outline" viewBox="0 0 24 24" width="512" height="512"><path d="M12,12A6,6,0,1,0,6,6,6.006,6.006,0,0,0,12,12ZM12,2A4,4,0,1,1,8,6,4,4,0,0,1,12,2Z"/><path d="M12,14a9.01,9.01,0,0,0-9,9,1,1,0,0,0,2,0,7,7,0,0,1,14,0,1,1,0,0,0,2,0A9.01,9.01,0,0,0,12,14Z"/></svg>
+          <li class="liStyle flex space-x-1 items-center">
+            <svg
+              class="fill-primary iconStyle"
+              xmlns="http://www.w3.org/2000/svg"
+              id="Outline"
+              viewBox="0 0 24 24"
+              width="512"
+              height="512"
+            >
+              <path
+                d="M12,12A6,6,0,1,0,6,6,6.006,6.006,0,0,0,12,12ZM12,2A4,4,0,1,1,8,6,4,4,0,0,1,12,2Z"
+              />
+              <path
+                d="M12,14a9.01,9.01,0,0,0-9,9,1,1,0,0,0,2,0,7,7,0,0,1,14,0,1,1,0,0,0,2,0A9.01,9.01,0,0,0,12,14Z"
+              />
+            </svg>
 
-            <p class="text-forText-dark">
-              Profile
-            </p>
+            <p class="text-forText-dark">Profile</p>
           </li>
         </ul>
         <!-- second-child  -->
-         <div class="flex items-center">
-          <svg class="fill-primary iconStyle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="512" height="512"><g id="_01_align_center" data-name="01 align center"><path d="M15,24H9V20.487a9,9,0,0,1-2.849-1.646L3.107,20.6l-3-5.2L3.15,13.645a9.1,9.1,0,0,1,0-3.29L.107,8.6l3-5.2L6.151,5.159A9,9,0,0,1,9,3.513V0h6V3.513a9,9,0,0,1,2.849,1.646L20.893,3.4l3,5.2L20.85,10.355a9.1,9.1,0,0,1,0,3.29L23.893,15.4l-3,5.2-3.044-1.758A9,9,0,0,1,15,20.487Zm-4-2h2V18.973l.751-.194A6.984,6.984,0,0,0,16.994,16.9l.543-.553,2.623,1.515,1-1.732-2.62-1.513.206-.746a7.048,7.048,0,0,0,0-3.75l-.206-.746,2.62-1.513-1-1.732L17.537,7.649,16.994,7.1a6.984,6.984,0,0,0-3.243-1.875L13,5.027V2H11V5.027l-.751.194A6.984,6.984,0,0,0,7.006,7.1l-.543.553L3.84,6.134l-1,1.732L5.46,9.379l-.206.746a7.048,7.048,0,0,0,0,3.75l.206.746L2.84,16.134l1,1.732,2.623-1.515.543.553a6.984,6.984,0,0,0,3.243,1.875l.751.194Zm1-6a4,4,0,1,1,4-4A4,4,0,0,1,12,16Zm0-6a2,2,0,1,0,2,2A2,2,0,0,0,12,10Z"/></g></svg>
-         </div>
+        <div class="flex items-center">
+          <svg
+            class="fill-primary iconStyle"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            width="512"
+            height="512"
+          >
+            <g id="_01_align_center" data-name="01 align center">
+              <path
+                d="M15,24H9V20.487a9,9,0,0,1-2.849-1.646L3.107,20.6l-3-5.2L3.15,13.645a9.1,9.1,0,0,1,0-3.29L.107,8.6l3-5.2L6.151,5.159A9,9,0,0,1,9,3.513V0h6V3.513a9,9,0,0,1,2.849,1.646L20.893,3.4l3,5.2L20.85,10.355a9.1,9.1,0,0,1,0,3.29L23.893,15.4l-3,5.2-3.044-1.758A9,9,0,0,1,15,20.487Zm-4-2h2V18.973l.751-.194A6.984,6.984,0,0,0,16.994,16.9l.543-.553,2.623,1.515,1-1.732-2.62-1.513.206-.746a7.048,7.048,0,0,0,0-3.75l-.206-.746,2.62-1.513-1-1.732L17.537,7.649,16.994,7.1a6.984,6.984,0,0,0-3.243-1.875L13,5.027V2H11V5.027l-.751.194A6.984,6.984,0,0,0,7.006,7.1l-.543.553L3.84,6.134l-1,1.732L5.46,9.379l-.206.746a7.048,7.048,0,0,0,0,3.75l.206.746L2.84,16.134l1,1.732,2.623-1.515.543.553a6.984,6.984,0,0,0,3.243,1.875l.751.194Zm1-6a4,4,0,1,1,4-4A4,4,0,0,1,12,16Zm0-6a2,2,0,1,0,2,2A2,2,0,0,0,12,10Z"
+              />
+            </g>
+          </svg>
+        </div>
       </div>
     </nav>
+    <!-- blogs tags -->
+    <main class="px-5">
+      <!-- first-child -->
+      <div class="pt-5 flex items-center justify-between">
+        <!-- first-child -->
+        <div
+          class="flex text-forText-dark items-center space-x-2 cursor-pointer"
+        >
+          <p>Feed settings</p>
+          <span>
+            <svg
+              class="iconStyle fill-primary"
+              xmlns="http://www.w3.org/2000/svg"
+              id="Outline"
+              viewBox="0 0 24 24"
+              width="512"
+              height="512"
+            >
+              <path
+                d="M1,4.75H3.736a3.728,3.728,0,0,0,7.195,0H23a1,1,0,0,0,0-2H10.931a3.728,3.728,0,0,0-7.195,0H1a1,1,0,0,0,0,2ZM7.333,2a1.75,1.75,0,1,1-1.75,1.75A1.752,1.752,0,0,1,7.333,2Z"
+              />
+              <path
+                d="M23,11H20.264a3.727,3.727,0,0,0-7.194,0H1a1,1,0,0,0,0,2H13.07a3.727,3.727,0,0,0,7.194,0H23a1,1,0,0,0,0-2Zm-6.333,2.75A1.75,1.75,0,1,1,18.417,12,1.752,1.752,0,0,1,16.667,13.75Z"
+              />
+              <path
+                d="M23,19.25H10.931a3.728,3.728,0,0,0-7.195,0H1a1,1,0,0,0,0,2H3.736a3.728,3.728,0,0,0,7.195,0H23a1,1,0,0,0,0-2ZM7.333,22a1.75,1.75,0,1,1,1.75-1.75A1.753,1.753,0,0,1,7.333,22Z"
+              />
+            </svg>
+          </span>
+        </div>
+        <!-- last-child  -->
+        <div class="text-forText-dark flex items-center">
+          <abbr class="flex items-center text-lg" title="Day Streaks">
+            <svg
+              class="fill-accent iconStyle"
+              xmlns="http://www.w3.org/2000/svg"
+              id="Layer_1"
+              data-name="Layer 1"
+              viewBox="0 0 24 24"
+              width="512"
+              height="512"
+            >
+              <path
+                d="M15.477,18.61c0-1.283-.808-2.029-2.357-3.344-.35-.3-.728-.618-1.118-.972-.445.409-.868.769-1.256,1.1C9.2,16.7,8.523,17.339,8.523,18.61a3.477,3.477,0,0,0,6.954,0Z"
+              />
+              <path
+                d="M16.408,4.035c-1.2-1.019-2.44-2.072-3.694-3.325L12,0,11.3.711c-2.254,2.262-3.32,5.736-3.782,7.82a6.04,6.04,0,0,1-.779-1.785L6.312,5.109,5.079,6.266c-2.159,2.028-3.6,4.039-3.6,7.259a10.422,10.422,0,0,0,7.8,10.18A11.153,11.153,0,0,0,11,24a5.491,5.491,0,0,1-4.485-5.39c0-2.25,1.357-3.4,2.928-4.742.561-.477,1.2-1.018,1.845-1.667L12,11.493l.708.708c.576.576,1.152,1.064,1.709,1.538,1.576,1.337,3.064,2.6,3.064,4.871a5.489,5.489,0,0,1-4.456,5.384A10.51,10.51,0,0,0,22.52,13.527C22.52,9.225,19.687,6.82,16.408,4.035Z"
+              />
+            </svg>
+          </abbr>
+          <p class="text-xl text-accent">0</p>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
