adding Main viewport for blog posts

--- a/src/index.html
+++ b/src/index.html
@@ -262,6 +262,80 @@
           <p class="text-xl text-accent">0</p>
         </div>
       </div>
+      <!-- parent  -->
+      <div class="grid grid-cols-3 gap-4 text-forText-dark py-5">
+        <!-- first column  -->
+        <div class="flex justify-center flex-col">
+          <!-- child  -->
+          <div
+            class="max-w-[318.2px] border-secondary-dark border-2 rounded-xl py-5 px-5"
+          >
+            <!-- firstchild  -->
+            <div class="flex justify-between items-center">
+              <svg
+                class="iconStyle border-1 border-black fill-secondary-light"
+                xmlns="http://www.w3.org/2000/svg"
+                id="Outline"
+                viewBox="0 0 24 24"
+                width="512"
+                height="512"
+              >
+                <path
+                  d="M12,12A6,6,0,1,0,6,6,6.006,6.006,0,0,0,12,12ZM12,2A4,4,0,1,1,8,6,4,4,0,0,1,12,2Z"
+                />
+                <path
+                  d="M12,14a9.01,9.01,0,0,0-9,9,1,1,0,0,0,2,0,7,7,0,0,1,14,0,1,1,0,0,0,2,0A9.01,9.01,0,0,0,12,14Z"
+                />
+              </svg>
+              <!-- icon family  -->
+              <div class="flex items-center space-x-2">
+                <span class="cursor-pointer">Read Post</span>
+                <span class="">
+                  <svg
+                    class="iconStyle fill-secondary-dark"
+                    xmlns="http://www.w3.org/2000/svg"
+                    id="Layer_1"
+                    data-name="Layer 1"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      d="m12,0C5.383,0,0,5.383,0,12s5.383,12,12,12,12-5.383,12-12S18.617,0,12,0Zm0,22c-5.514,0-10-4.486-10-10S6.486,2,12,2s10,4.486,10,10-4.486,10-10,10Zm-4-10c0,.828-.672,1.5-1.5,1.5s-1.5-.672-1.5-1.5.672-1.5,1.5-1.5,1.5.672,1.5,1.5Zm11,0c0,.828-.672,1.5-1.5,1.5s-1.5-.672-1.5-1.5.672-1.5,1.5-1.5,1.5.672,1.5,1.5Zm-5.5,0c0,.828-.672,1.5-1.5,1.5s-1.5-.672-1.5-1.5.672-1.5,1.5-1.5,1.5.672,1.5,1.5Z"
+                    />
+                  </svg>
+                </span>
+              </div>
+            </div>
+            <!-- heading  -->
+            <div class="pt-3">
+              <p class="text-2xl">China Town</p>
+            </div>
+            <!-- tags  -->
+            <div class="pt-5">
+              <span class="bg-secondary-dark rounded-md px-1 py-1 text-sm"
+                >#Cars</span
+              >
+              <span class="bg-secondary-dark rounded-md px-1 py-1 text-sm"
+                >#Classic</span
+              >
+            </div>
+            <!-- post info -->
+            <div class="text-[10px] pt-3 space-x-2">
+              <span>Aug 25</span>
+              <span>|</span>
+              <span>2m read time</span>
+            </div>
+            <!-- image -->
+            <img class="pt-3 rounded-xl" src="../assets/img/annie-spratt-5dYFyY_mAzQ-unsplash.jpg" alt="">
+            <!-- <div style="background-image: url(../assets/img/annie-spratt-5dYFyY_mAzQ-unsplash.jpg);"> -->
+            </div>
+            <div>
+              
+            </div>
+          </div>
+        </div>
+        <div class="flex justify-center">Column 2</div>
+        <div class="flex justify-center">Column 3</div>
+      </div>
     </main>
   </body>
 </html>
